--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,3 +1,121 @@
+/* FONT IMPORT */
+@import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100;200;300;400&display=swap");
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+main {
+  display: block;
+  unicode-bidi: isolate;
+}
+/*Root Config*/
+:root {
+  /* WIDTH */
+  --width-max: 100%;
+  --width-2: 90%;
+  --width-3: 80%;
+  --width-4: 70%;
+  --width-5: 60%;
+
+  /* Margens */
+  --mg-sm: 0.5em;
+  --mg-md: 1em;
+  --mg-lg: 2em;
+  --mg-xl: 3em;
+  --mg-hero: 0 auto;
+
+  /* Padding */
+  --pd-hero: 7.63rem 2rem;
+  --pd-botao: 0.65rem 2.5rem;
+  --pd-sm: 0.5em;
+  --pd-md: 1em;
+  --pd-lg: 2em;
+  --pd-xl: 3em;
+
+  /* GAP */
+  --gap-sm: -05 0.5rem;
+  --gap-md-1: 1.6rem;
+  --gap-lg-2: 2rem;
+  --gap-xl: 3.12rem;
+
+  /* Border Radius */
+  --br-sm: 0.5rem;
+  --br-md: 1rem;
+  --br-lg-3: 3rem;
+  --br-xl: 2rem;
+  --br-xxl: 3rem;
+
+  /* Tipografia */
+
+  --ff-Vietnam: "Be Vietnam Pro", sans-serif;
+
+  --fs-1: 2.2rem;
+  --fs-2: 2.4rem;
+  --fs-3: 1.25rem;
+  --fs-4: 1.078rem;
+  --fs-5: 1rem;
+  --fs-6: 0.938rem;
+  --fs-7: 0.875rem;
+  --fs-8: 0.844rem;
+  --fs-9: 0.813rem;
+  --fs-10: 0.769rem;
+
+  /* Font Weight */
+  --fw-100: 100;
+  --fw-200: 200;
+  --fw-300: 300;
+  --fw-400: 400;
+  --fw-500: 500;
+  --fw-600: 600;
+  --fw-700: 700;
+
+  /* GREY PALLETE */
+  --grey-1: #404040;
+  --grey-2: #8c8c8c;
+  --grey-3: #a6a6a6;
+  --grey-4: #bfbfbf;
+  --grey-5: #d9d9d9;
+
+  /* BLUE PALLETE */
+  --blue-1: #0554f2;
+  --blue-2: #056cf2;
+  --blue-3: #77acf2;
+  --blue-4: #0583f2;
+  --blue-5: #b6d6f2;
+  /* Cores */
+
+  --p-color: #dce6f2;
+  --s-color: #1e0d8c;
+  --t-color: #2c0aa6;
+  --f-color: #6907f2;
+  --ff-color: #9904d9;
+
+  --blk-color: #0d0d0d;
+  --grey-color: hsl(225, 11%, 59%);
+  --light-grey: rgb(240, 233, 233);
+  --lght-blk-color: #262626;
+  --green-color: #0da633;
+  --red-orange-color: #f2522e;
+  --light-white: #fcfcfa;
+  --yellow-color: #f2ce16;
+
+  /* Sombras */
+  --botao-shadow: 0 0.21rem 0.8rem rgba(0, 0, 0, 0.15);
+  --shadow-1: inset 0px 0px 15px -7px rgba(189, 189, 189, 1);
+  --shadow-2: inset 0px 0px 15px -7px rgba(189, 189, 189, 1);
+  --shadow-3: inset 0px 0px 15px -7px rgba(189, 189, 189, 1);
+
+  /**
+     * transition
+     */
+
+  --transition: 0.25s ease;
+  --cubic-out: cubic-bezier(0.45, 0.85, 0.5, 1);
+  --cubic-in: cubic-bezier(0.5, 0, 0.5, 0.95);
+}
+
 /* HEADER */
 /* Navbar */
 .navbar-collapse {
@@ -78,5 +196,133 @@
     border: none !important;
     background-color: transparent !important;
     padding: 0.2em 0.6em !important;
+  }
+}
+
+/* PRIMEIRA SECTION */
+.secao-hero {
+  background-image: url(../Images/bg-img/b-banner-1.png);
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.secao {
+  padding: 3.3rem 2rem;
+}
+
+.container-hero {
+  display: flex;
+  gap: 1.12rem;
+  align-items: center;
+}
+.container {
+  max-width: 100rem;
+  margin: 0 auto;
+}
+/* Conteudo dentro do Container Hero 1 */
+.hero-coluna {
+  display: flex;
+  flex-flow: column;
+  gap: var(--gap-lg-2);
+  width: 50%;
+}
+.hero-button {
+  display: flex;
+  gap: var(--gap-md-1);
+}
+.hero-botao {
+  background-image: linear-gradient(180deg, #ff645e, #ff9253);
+}
+.botao {
+  color: var(--p-color);
+  display: inline-block;
+  text-align: center;
+  font-size: 12px;
+  font-weight: var(--fw-700);
+  text-decoration: none;
+  border-radius: var(--br-lg-3);
+  padding: var(--pd-botao);
+  box-shadow: var(--botao-shadow);
+  border-bottom: solid 0.4rem #993c38;
+  border-right: solid 0.4rem #993c38;
+  transition: ease-in 100ms;
+  transition-property: border;
+}
+.iframe-video {
+  aspect-ratio: 16 / 9;
+  border-radius: 2.5rem;
+  flex: 5;
+}
+.iframe-cs {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+}
+h1 {
+  font-size: 17px;
+}
+@media only screen and (max-width: 768px) {
+  body {
+    font-size: 14px;
+  }
+  .secao {
+    padding: 1.6rem 0rem;
+  }
+  .container-hero {
+    flex-direction: column !important;
+  }
+  .hero-coluna {
+    width: 100%;
+    text-align: center;
+  }
+  .hero-button {
+    text-align: center;
+    justify-content: center;
+  }
+  .iframe-video {
+    display: flex;
+    max-width: 300px;
+    aspect-ratio: 16 / 9;
+    border-radius: 2.5rem;
+    flex: 5;
+  }
+}
+
+/* Desktop - 1025px em diante */
+@media only screen and (max-width: 1060px) {
+  body {
+    font-size: 16px;
+  }
+  .nav-link {
+    position: relative;
+    display: inline-block;
+    padding: 0.3rem 0.7rem;
+    color: black !important;
+    font-size: 0.9em !important;
+    font-weight: var(--fw-400);
+    opacity: 100% !important;
+  }
+}
+@media only screen and (max-width: 990px) {
+  body {
+    font-size: 14px;
+  }
+  .container{
+    flex-direction: column;
+  }
+  .container-hero {
+    
+  }
+  }
+  .hero-coluna{
+    width: 100%;
+    justify-content: center;
+  }
+  .iframe-cs{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
   }
 }
