--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -451,13 +451,13 @@ h5 {
   flex-direction: row;
   color: rgb(110, 103, 103);
   text-decoration: none;
+  text-align: center;
   border: none;
   border-radius: 20px;
   background-color: whitesmoke;
-  padding-left: 1em;
   padding-top: 0.25em;
   padding-bottom: 0.25em;
-  gap: 0.5em;
+
   box-shadow: inset 0 0 0.4rem 0.2rem rgba(0, 0, 0, 0.15);
 }
 .social-icons-img {
@@ -468,12 +468,12 @@ h5 {
   margin: 0px !important;
   padding: 0px !important;
   font-weight: var(--fw-300);
-  font-size: 1.4em;
+  font-size: 1.1rem;
 }
 .card-title-h1 {
   margin: 0px !important;
   padding: 0px !important;
-  font-size: 1.7rem !important;
+  font-size: 1.2rem !important;
   font-weight: bold;
   text-align: center;
 }
