--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -430,11 +430,8 @@ h5 {
   gap: 1em;
   box-shadow: inset 0 0 0.8rem 0.1rem rgba(0, 0, 0, 0.15);
   border-radius: 2.5rem;
-  width: 50%;
-  max-width: 50%;
-
 }
-.circulo-logo-cd {
+/* .circulo-logo-cd {
   display: inline-block;
   background-color: #e7e7e7;
   border-radius: 50%;
@@ -442,6 +439,16 @@ h5 {
   padding: 0.9em;
   width: 3.4rem;
   height: 3.4rem;
+} */
+.circulo-logo-cd .btn-cd-img {
+  display: inline-block;
+  background-color: #e7e7e7;
+  border-radius: 50%;
+  box-shadow: inset 0 0 0.4rem 0.2rem rgba(0, 0, 0, 0.15);
+  padding: 0.9em;
+  width: 50px; /* Define um tamanho fixo para a largura */
+  height: 50px; /* Define um tamanho fixo para a altura */
+  object-fit: contain; /* Garante que a imagem não seja distorcida */
 }
 .btn-cd-img {
   width: 100%;
@@ -461,7 +468,7 @@ h5 {
   box-shadow: inset 0 0 0.4rem 0.2rem rgba(0, 0, 0, 0.15);
 }
 .social-icons-img {
-  object-fit: contain;
+  object-fit: cover;
   max-width: 18px;
 }
 .card-content-h3 {
@@ -490,14 +497,20 @@ h5 {
   transform: rotate(-3deg) translate(-50%, -50%);
   box-shadow: 0 0.21rem 0.4rem rgba(0, 0, 0, 0.15);
 }
-.content-btn{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 0.4em;
+.content-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.4em;
 }
 .content-media-col {
   display: flex;
   flex-direction: column;
   gap: 0.5em;
+}
+@media (max-width: 768px) {
+    .sec-hero-container{
+        flex-direction: column;
+        gap: 1em;
+    }
 }
